Set username via a form

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>The Hat Game</title>
 </head>
 <body>
-  this is the hat game
+  <main>
+    <form id="username" method="post">
+      <label>
+        Please enter your name
+        <input required type="text" name="username" placeholder="e.g. adele" />
+      </label>
+      <button type="submit">Continue</button>
+    </form>
+  </main>
+  <script src="/client.js"></script>
 </body>
 </html>
