Show whose turn it is

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
         <p>In Round 1, you can use as many words as you need to describe the name you draw.</p>
         <p>In Round 2, you can only use a single word. If it helps, you can say it multiple times.</p>
         <p>In Round 3, you cannot make a sound! You must act out the name instead.</p>
+        <div id="whose-turn"></div>
       </section>
 
     </main>
